--- a/.env
+++ b/.env
@@ -16,6 +16,9 @@ INNGEST_EVENT_KEY='k1mib9Pj0u_QCMse-x4Y-xia2Lk9rwtkBUQnc_rCZVoePOnV7Lsxs6AWXXiN6
 
 
 # Cloudinary
-CLOUDINARY_CLOUD_NAME =''
-CLOUDINARY_API_KEY =''
-CLOUDINARY_API_SECRET =''
+
+CLOUDINARY_CLOUD_NAME ='deesgxacn'
+
+CLOUDINARY_API_KEY ='387458869556452'
+
+CLOUDINARY_API_SECRET ='6MJV7suMo_0G__099y3rJzHmZx0'
